--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".reviews.Comments">
+    tools:context=".reviews.Comments"
+    style="@style/allPages">
 
     <ScrollView
         android:layout_width="match_parent"
