--- a/app/src/main/res/layout/review.xml
+++ b/app/src/main/res/layout/review.xml
@@ -25,24 +25,26 @@
         android:id="@+id/ratingBarReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/footerReviewLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerReviewLayout"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/reviewReviewInput"
+        app:layout_constraintVertical_bias="0.063" />
 
     <Button
         android:id="@+id/rateReviewBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/rate"
         app:layout_constraintBottom_toTopOf="@+id/footerReviewLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerReviewLayout"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBarReview"
+        app:layout_constraintVertical_bias="0.106" />
 
     <LinearLayout
         android:id="@+id/headerReviewLayout"
