добавлены подписки на мой профиль, на чужом профиле есть возможность подписаться

--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -31,7 +31,19 @@
         app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orderProfileScroll"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintVertical_bias="0.1" />
+
+    <Button
+        android:id="@+id/subscribersProfileBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Подписки"
+        app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toEndOf="@+id/avatarProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/logOutProfileBtn"
+        app:layout_constraintVertical_bias="0.1" />
 
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/servicesOrOrdersProfileSwitch"
@@ -140,12 +152,12 @@
         android:id="@+id/ratingLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
         app:layout_constraintEnd_toStartOf="@+id/servicesOrOrdersProfileSwitch"
-        app:layout_constraintTop_toBottomOf="@+id/orderProfileScroll">
+        app:layout_constraintStart_toEndOf="@+id/addServicesProfileBtn"
+        app:layout_constraintTop_toBottomOf="@+id/orderProfileScroll"
+        app:layout_constraintVertical_bias="0.13">
 
         <ProgressBar
             android:id="@+id/progressBarProfile"
