--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -10,7 +10,7 @@
     <Button
         android:id="@+id/logOutProfileBtn"
         android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.1" />
 
     <Button
-        android:id="@+id/subscribersProfileBtn"
+        android:id="@+id/subscriptionsProfileBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Подписки"
@@ -44,6 +44,19 @@
         app:layout_constraintStart_toEndOf="@+id/avatarProfileImage"
         app:layout_constraintTop_toBottomOf="@+id/logOutProfileBtn"
         app:layout_constraintVertical_bias="0.1" />
+
+    <Button
+        android:id="@+id/subscribersProfileBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Подписчики"
+        app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.862"
+        app:layout_constraintStart_toEndOf="@+id/avatarProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/subscriptionsProfileBtn"
+        app:layout_constraintVertical_bias="0.04" />
 
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/servicesOrOrdersProfileSwitch"
@@ -68,8 +81,8 @@
 
     <ScrollView
         android:id="@+id/servicesProfileScroll"
-        android:layout_width="330dp"
-        android:layout_height="184dp"
+        android:layout_width="317dp"
+        android:layout_height="148dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -98,8 +111,8 @@
 
     <ScrollView
         android:id="@+id/orderProfileScroll"
-        android:layout_width="330dp"
-        android:layout_height="188dp"
+        android:layout_width="315dp"
+        android:layout_height="146dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
