--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -12,6 +12,8 @@
         android:id="@+id/nameAddServiceInput"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="8dp"
         android:hint="@string/nameAddServiceTB"
         android:inputType="textPersonName|textCapWords"
         app:layout_constraintBottom_toTopOf="@+id/costAddServiceInput"
@@ -19,13 +21,15 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.781" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/costAddServiceInput"
         android:layout_width="300dp"
         android:layout_height="42dp"
         android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="64dp"
         android:ems="10"
         android:hint="@string/costAddServiceTB"
         android:inputType="number"
@@ -33,8 +37,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.936" />
+        app:layout_constraintTop_toTopOf="@+id/headerAddServiceLayout"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/descriptionAddServiceInput"
@@ -48,7 +52,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.637" />
+        app:layout_constraintVertical_bias="0.663" />
 
     <Button
         android:id="@+id/addServiceAddServiceBtn"
@@ -80,11 +84,12 @@
     <HorizontalScrollView
         android:layout_width="395dp"
         android:layout_height="130dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/addServiceAddServiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionAddServiceInput"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout"
+        app:layout_constraintVertical_bias="0.977">
 
         <LinearLayout
             android:id="@+id/feedAddServiceLayout"
@@ -100,5 +105,22 @@
                 tools:srcCompat="@tools:sample/avatars" />
         </LinearLayout>
     </HorizontalScrollView>
+
+    <Spinner
+        android:id="@+id/categoryAddServiceSpinner"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:entries="@array/category"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionAddServiceInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout"
+        app:layout_constraintVertical_bias="0.961" />
 
 </android.support.constraint.ConstraintLayout>
