--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -29,11 +29,28 @@
         android:layout_height="42dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="@string/costAddServiceTB"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/descriptionAddServiceInput"
+        app:layout_constraintBottom_toTopOf="@+id/categoryAddServiceSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/headerAddServiceLayout"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/addressAddServiceInput"
+        android:layout_width="300dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:hint="Адрес"
+        android:inputType="textPersonName|textCapWords"
+        app:layout_constraintBottom_toTopOf="@+id/nameAddServiceInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +69,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.663" />
+        app:layout_constraintVertical_bias="0.697" />
 
     <Button
         android:id="@+id/addServiceAddServiceBtn"
