--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -48,7 +48,7 @@
         android:layout_gravity="center"
         android:backgroundTint="@color/lightText"
         android:ems="10"
-        android:hint="@string/surnameRegistration"
+        android:hint="@string/surname"
         android:inputType="textPersonName|textCapWords"
         android:textColor="@color/white"
         android:textColorHint="@color/lightText" />
